compiler/LexTest/yacc.output
Terminals which are not used

   ERROR


Grammar

    0 $accept: Program $end

    1 Program: Program Namespacedecl
    2        | Namespacedecl
    3        | RC
    4        | Program RC
    5        | error

    6 @1: /* empty */

    7 Namespacedecl: NAMESPACE QID LC @1 NamespaceBody

    8 @2: /* empty */

    9 Namespacedecl: NAMESPACE error @2 NamespaceBody

   10 @3: /* empty */

   11 Namespacedecl: NAMESPACE QID error @3 NamespaceBody
   12              | NAMESPACE QID RC

   13 NamespaceBody: nTypeDecl RC

   14 nTypeDecl: nTypeDecl TypeDecl
   15          | nTypeDecl ErrorDecl
   16          | /* empty */

   17 TypeDecl: Namespacedecl
   18         | classdecl
   19         | Interfacedecl

   20 ErrorDecl: error

   21 @4: /* empty */

   22 classdecl: Modifier CLASS ID INHERITS QID IMPLEMENTS QIDList IS @4 classBody

   23 @5: /* empty */

   24 classdecl: Modifier CLASS ID IMPLEMENTS QIDList IS @5 classBody

   25 @6: /* empty */

   26 classdecl: Modifier CLASS ID INHERITS QID IS @6 classBody

   27 @7: /* empty */

   28 classdecl: Modifier CLASS ID IS @7 classBody

   29 @8: /* empty */

   30 classdecl: CLASS ID INHERITS QID IMPLEMENTS QIDList IS @8 classBody

   31 @9: /* empty */

   32 classdecl: CLASS ID IMPLEMENTS QIDList IS @9 classBody

   33 @10: /* empty */

   34 classdecl: CLASS ID INHERITS QID IS @10 classBody

   35 @11: /* empty */

   36 classdecl: CLASS ID IS @11 classBody

   37 @12: /* empty */

   38 classdecl: Modifier CLASS ID IMPLEMENTS error @12 classBody

   39 @13: /* empty */

   40 classdecl: CLASS ID IMPLEMENTS error @13 classBody

   41 @14: /* empty */

   42 classdecl: Modifier CLASS ID INHERITS error @14 classBody

   43 @15: /* empty */

   44 classdecl: CLASS ID INHERITS error @15 classBody

   45 @16: /* empty */

   46 classdecl: Modifier CLASS error @16 classBody

   47 @17: /* empty */

   48 classdecl: CLASS error @17 classBody

   49 @18: /* empty */

   50 classdecl: Modifier CLASS ID INHERITS QID IMPLEMENTS QIDList error @18 classBody

   51 @19: /* empty */

   52 classdecl: CLASS ID INHERITS QID IMPLEMENTS QIDList error @19 classBody

   53 @20: /* empty */

   54 classdecl: Modifier CLASS ID IMPLEMENTS QIDList error @20 classBody

   55 @21: /* empty */

   56 classdecl: CLASS ID IMPLEMENTS QIDList error @21 classBody

   57 @22: /* empty */

   58 classdecl: Modifier CLASS ID INHERITS QID error @22 classBody

   59 @23: /* empty */

   60 classdecl: CLASS ID INHERITS QID error @23 classBody

   61 @24: /* empty */

   62 classdecl: Modifier CLASS ID error @24 classBody

   63 @25: /* empty */

   64 classdecl: CLASS ID error @25 classBody
   65          | Modifier CLASS ID INHERITS QID IMPLEMENTS QIDList END
   66          | CLASS ID INHERITS QID IMPLEMENTS QIDList END
   67          | Modifier CLASS ID INHERITS QID END
   68          | CLASS ID INHERITS QID END
   69          | Modifier CLASS ID IMPLEMENTS QIDList END
   70          | CLASS ID IMPLEMENTS QIDList END
   71          | Modifier CLASS ID END
   72          | CLASS ID END

   73 classBody: nFeature END
   74          | nFeature TypeDecl

   75 QID: QID DOT ID
   76    | ID

   77 QIDList: QIDList COMMA QID
   78        | QID

   79 nFormal: nFormal COMMA formal
   80        | formal

   81 formal: ID COLON QID
   82       | ID COLON error
   83       | ID error

   84 nFeature: nFeature Feature
   85         | nFeature ErrorDecl
   86         | /* empty */

   87 Feature: fieldDecl
   88        | functionDecl
   89        | abstFuncDecl

   90 @26: /* empty */

   91 fieldDecl: Modifier ID COLON QID @26 fieldBody

   92 @27: /* empty */

   93 fieldDecl: ID COLON QID @27 fieldBody

   94 @28: /* empty */

   95 fieldDecl: Modifier ID COLON error @28 fieldBody

   96 @29: /* empty */

   97 fieldDecl: ID COLON error @29 fieldBody
   98          | Modifier ID COLON QID error
   99          | ID COLON QID error
  100          | Modifier ID COLON QID LB INT RB SEMICOLON
  101          | ID COLON QID LB INT RB SEMICOLON
  102          | Modifier ID COLON QID LB RB SEMICOLON
  103          | ID COLON QID LB RB SEMICOLON
  104          | Modifier ID COLON QID LB INT RB INTValue SEMICOLON
  105          | ID COLON QID LB INT RB INTValue SEMICOLON

  106 INTValue: INTValue LB INT RB
  107         | INTValue LB INT error
  108         | INTValue LB RB

  109 @30: /* empty */

  110 INTValue: INTValue LB error @30 RB
  111         | LB INT RB
  112         | LB INT error
  113         | LB RB

  114 @31: /* empty */

  115 INTValue: LB error @31 RB

  116 @32: /* empty */

  117 functionDecl: Modifier ID LP nFormal RP COLON QID IS @32 functionBody

  118 @33: /* empty */

  119 functionDecl: Modifier ID LP RP COLON QID IS @33 functionBody

  120 @34: /* empty */

  121 functionDecl: ID LP nFormal RP COLON QID IS @34 functionBody

  122 @35: /* empty */

  123 functionDecl: ID LP RP COLON QID IS @35 functionBody

  124 @36: /* empty */

  125 functionDecl: Modifier ID LP error @36 functionBody

  126 @37: /* empty */

  127 functionDecl: Modifier ID LP RP COLON error @37 functionBody

  128 @38: /* empty */

  129 functionDecl: Modifier ID LP RP error @38 functionBody

  130 @39: /* empty */

  131 functionDecl: Modifier ID LP RP COLON QID @39 functionBody

  132 @40: /* empty */

  133 functionDecl: Modifier ID LP nFormal error @40 functionBody

  134 @41: /* empty */

  135 functionDecl: Modifier ID LP nFormal RP error @41 functionBody

  136 @42: /* empty */

  137 functionDecl: Modifier ID LP nFormal RP COLON error @42 functionBody

  138 @43: /* empty */

  139 functionDecl: Modifier ID LP nFormal RP COLON QID @43 functionBody

  140 @44: /* empty */

  141 functionDecl: ID LP error @44 functionBody

  142 @45: /* empty */

  143 functionDecl: ID LP RP error @45 functionBody

  144 @46: /* empty */

  145 functionDecl: ID LP RP COLON error @46 functionBody

  146 @47: /* empty */

  147 functionDecl: ID LP RP COLON QID @47 functionBody

  148 @48: /* empty */

  149 functionDecl: ID LP nFormal error @48 functionBody

  150 @49: /* empty */

  151 functionDecl: ID LP nFormal RP COLON error @49 functionBody

  152 @50: /* empty */

  153 functionDecl: ID LP nFormal RP error @50 functionBody

  154 @51: /* empty */

  155 functionDecl: ID LP nFormal RP COLON QID @51 functionBody
  156             | Modifier error
  157             | ID
  158             | Modifier ID

  159 abstFuncDecl: Modifier ID LP nFormal RP COLON QID SEMICOLON
  160             | Modifier ID LP RP COLON QID SEMICOLON
  161             | ID LP RP COLON QID SEMICOLON
  162             | ID LP nFormal RP COLON QID SEMICOLON

  163 fieldBody: ASSIGN expr SEMICOLON
  164          | SEMICOLON

  165 functionBody: nExpr END
  166             | END

  167 ModifierBuild: PUBLIC
  168              | PROTECTED
  169              | INTERNAL
  170              | PRIVATE
  171              | STATIC
  172              | READONLY
  173              | ABSTRACT
  174              | SEALED
  175              | OVERRIDE
  176              | VIRTUAL
  177              | NEW

  178 Modifier: Modifier ModifierBuild
  179         | ModifierBuild

  180 callExpr: callExpr COMMA expr
  181         | expr

  182 letExpr: letExpr COMMA ID COLON QID ASSIGN expr
  183        | letExpr COMMA ID COLON QID
  184        | letExpr COMMA ID COLON error
  185        | letExpr COMMA ID error
  186        | letExpr error
  187        | ID COLON QID ASSIGN expr
  188        | ID COLON QID
  189        | ID COLON error
  190        | ID error

  191 caseExpr: caseExpr CASE expr RE expr SEMICOLON
  192         | caseExpr CASE expr RE expr
  193         | caseExpr CASE expr error SEMICOLON
  194         | caseExpr error
  195         | CASE expr RE expr SEMICOLON
  196         | CASE expr RE expr
  197         | CASE expr error SEMICOLON

  198 nExpr: nExpr expr SEMICOLON
  199      | expr SEMICOLON
  200      | nExpr exprError SEMICOLON
  201      | exprError
  202      | error

  203 expr: ID COLON QID
  204     | ID COLON QID LB INT RB
  205     | ID COLON QID ASSIGN expr
  206     | ID COLON QID LB RB
  207     | ID COLON QID LB RB ASSIGN NEW QID LB ID RB
  208     | ID COLON QID LB RB ASSIGN NEW QID LB INT RB
  209     | QID
  210     | QID LB INT RB
  211     | QID LB ID RB
  212     | QID ASSIGN expr
  213     | QID LB INT RB ASSIGN expr
  214     | QID LB ID RB ASSIGN expr
  215     | QID LP RP
  216     | QID LP callExpr RP
  217     | NEW QID LP RP
  218     | NEW QID LP callExpr RP
  219     | SUPER LP RP
  220     | SUPER LP callExpr RP
  221     | QID ASSIGN NEW QID LB ID RB
  222     | QID ASSIGN NEW QID LB INT RB
  223     | expr DOT ID ASSIGN expr
  224     | expr DOT ID
  225     | expr DOT ID LP RP
  226     | expr DOT ID LP callExpr RP
  227     | LP expr RP
  228     | expr AT QID

  229 @52: /* empty */

  230 @53: /* empty */

  231 @54: /* empty */

  232 @55: /* empty */

  233 expr: IF expr THEN @52 nExpr @53 ELSE @54 nExpr @55 FI

  234 @56: /* empty */

  235 @57: /* empty */

  236 expr: WHILE expr LOOP @56 nExpr @57 POOL

  237 @58: /* empty */

  238 @59: /* empty */

  239 expr: BEG @58 nExpr @59 END
  240     | BEG END

  241 @60: /* empty */

  242 @61: /* empty */

  243 @62: /* empty */

  244 expr: LET @60 letExpr @61 IN expr @62 END
  245     | SWITCH expr OF caseExpr ESAC
  246     | expr PLUS expr
  247     | expr MINUS expr
  248     | expr STAR expr
  249     | expr DIV expr
  250     | expr LT expr
  251     | expr LE expr
  252     | expr GT expr
  253     | expr GE expr
  254     | expr EQUAL expr
  255     | expr ND expr
  256     | expr AOR expr
  257     | ISVOID expr
  258     | NEGATE expr
  259     | NOT expr
  260     | DELETE expr
  261     | RETURN expr
  262     | MINUS INT
  263     | PLUS INT
  264     | INT
  265     | FLOAT
  266     | STRINGS
  267     | TRUE
  268     | FALSE
  269     | VOID

  270 exprError: NEW error
  271          | expr AT error
  272          | SWITCH expr error
  273          | err_FALSE error
  274          | err_TRUE error

  275 @63: /* empty */

  276 Interfacedecl: Modifier INTERFACE ID INHERITS QIDList LC @63 interfacebody

  277 @64: /* empty */

  278 Interfacedecl: Modifier INTERFACE ID LC @64 interfacebody

  279 @65: /* empty */

  280 Interfacedecl: INTERFACE ID INHERITS QIDList LC @65 interfacebody

  281 @66: /* empty */

  282 Interfacedecl: INTERFACE ID LC @66 interfacebody

  283 @67: /* empty */

  284 Interfacedecl: INTERFACE ID INHERITS QIDList error @67 interfacebody

  285 @68: /* empty */

  286 Interfacedecl: INTERFACE ID INHERITS error @68 interfacebody

  287 @69: /* empty */

  288 Interfacedecl: INTERFACE ID error @69 interfacebody

  289 @70: /* empty */

  290 Interfacedecl: INTERFACE error @70 interfacebody

  291 @71: /* empty */

  292 Interfacedecl: Modifier INTERFACE ID INHERITS QIDList error @71 interfacebody

  293 @72: /* empty */

  294 Interfacedecl: Modifier INTERFACE ID INHERITS error @72 interfacebody

  295 @73: /* empty */

  296 Interfacedecl: Modifier INTERFACE ID error @73 interfacebody

  297 @74: /* empty */

  298 Interfacedecl: Modifier INTERFACE error @74 interfacebody
  299              | Modifier INTERFACE ID INHERITS QIDList RC
  300              | INTERFACE ID INHERITS QIDList RC
  301              | Modifier INTERFACE ID RC
  302              | INTERFACE ID RC

  303 interfacebody: nInterfaceMethod RC
  304              | nInterfaceMethod TypeDecl

  305 nInterfaceMethod: nInterfaceMethod InterfaceMethod
  306                 | nInterfaceMethod ErrorDecl
  307                 | /* empty */

  308 InterfaceMethod: ID LP RP COLON QID SEMICOLON
  309                | ID LP nFormal RP COLON QID SEMICOLON
  310                | ID LP RP COLON QID
  311                | ID LP error SEMICOLON
  312                | ID error SEMICOLON
  313                | error SEMICOLON
  314                | ID LP nFormal RP COLON QID
  315                | ID LP nFormal error SEMICOLON
  316                | ID LP nFormal RP COLON QID LC error SEMICOLON
  317                | ID LP nFormal RP COLON QID IS error SEMICOLON
  318                | ID LP RP COLON QID LC error SEMICOLON
  319                | ID LP RP COLON QID IS error SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256) 5 9 11 20 38 40 42 44 46 48 50 52 54 56 58 60 62 64 82
    83 95 97 98 99 107 110 112 115 125 127 129 133 135 137 141 143
    145 149 151 153 156 184 185 186 189 190 193 194 197 202 270 271
    272 273 274 284 286 288 290 292 294 296 298 311 312 313 315 316
    317 318 319
NOT (258) 259
IF (259) 233
THEN (260) 233
ELSE (261) 233
FI (262) 233
WHILE (263) 236
LOOP (264) 236
POOL (265) 236
LET (266) 244
IN (267) 244
CASE (268) 191 192 193 195 196 197
OF (269) 245
ESAC (270) 245
SWITCH (271) 245 272
ERROR (272)
LC (273) 7 276 278 280 282 316 318
RC (274) 3 4 12 13 299 300 301 302 303
DOT (275) 75 223 224 225 226
COMMA (276) 77 79 180 182 183 184 185
LP (277) 117 119 121 123 125 127 129 131 133 135 137 139 141 143 145
    147 149 151 153 155 159 160 161 162 215 216 217 218 219 220 225
    226 227 308 309 310 311 314 315 316 317 318 319
RP (278) 117 119 121 123 127 129 131 135 137 139 143 145 147 151 153
    155 159 160 161 162 215 216 217 218 219 220 225 226 227 308 309
    310 314 316 317 318 319
COLON (279) 81 82 91 93 95 97 98 99 100 101 102 103 104 105 117 119
    121 123 127 131 137 139 145 147 151 155 159 160 161 162 182 183
    184 187 188 189 203 204 205 206 207 208 308 309 310 314 316 317
    318 319
LB (280) 100 101 102 103 104 105 106 107 108 110 111 112 113 115 204
    206 207 208 210 211 213 214 221 222
RB (281) 100 101 102 103 104 105 106 108 110 111 113 115 204 206 207
    208 210 211 213 214 221 222
SEMICOLON (282) 100 101 102 103 104 105 159 160 161 162 163 164 191
    193 195 197 198 199 200 308 309 311 312 313 315 316 317 318 319
IS (283) 22 24 26 28 30 32 34 36 117 119 121 123 317 319
BEG (284) 239 240
END (285) 65 66 67 68 69 70 71 72 73 165 166 239 240 244
err_FALSE (286) 273
err_TRUE (287) 274
INTERFACE (288) 276 278 280 282 284 286 288 290 292 294 296 298 299
    300 301 302
NAMESPACE (289) 7 9 11 12
CLASS (290) 22 24 26 28 30 32 34 36 38 40 42 44 46 48 50 52 54 56 58
    60 62 64 65 66 67 68 69 70 71 72
IMPLEMENTS (291) 22 24 30 32 38 40 50 52 54 56 65 66 69 70
RETURN (292) 261
INHERITS (293) 22 26 30 34 42 44 50 52 58 60 65 66 67 68 276 280 284
    286 292 294 299 300
AT (294) 228 271
VOID (295) 269
DELETE (296) 260
SUPER (297) 219 220
PLUS (298) 246 263
MINUS (299) 247 262
STAR (300) 248
DIV (301) 249
NEGATE (302) 258
LT (303) 250
LE (304) 251
GT (305) 252
GE (306) 253
EQUAL (307) 254
RE (308) 191 192 195 196
ND (309) 255
AOR (310) 256
ASSIGN (311) 163 182 187 205 207 208 212 213 214 221 222 223
ISVOID (312) 257
NEW (313) 177 207 208 217 218 221 222 270
INT (314) 100 101 104 105 106 107 111 112 204 208 210 213 222 262 263
    264
FLOAT (315) 265
STRINGS (316) 266
ID (317) 22 24 26 28 30 32 34 36 38 40 42 44 50 52 54 56 58 60 62 64
    65 66 67 68 69 70 71 72 75 76 81 82 83 91 93 95 97 98 99 100 101
    102 103 104 105 117 119 121 123 125 127 129 131 133 135 137 139
    141 143 145 147 149 151 153 155 157 158 159 160 161 162 182 183
    184 185 187 188 189 190 203 204 205 206 207 208 211 214 221 223
    224 225 226 276 278 280 282 284 286 288 292 294 296 299 300 301
    302 308 309 310 311 312 314 315 316 317 318 319
TRUE (318) 267
FALSE (319) 268
PUBLIC (320) 167
PRIVATE (321) 170
PROTECTED (322) 168
INTERNAL (323) 169
STATIC (324) 171
READONLY (325) 172
VIRTUAL (326) 176
SEALED (327) 174
OVERRIDE (328) 175
ABSTRACT (329) 173
XQID (330)


Nonterminals, with rules where they appear

$accept (76)
    on left: 0
Program (77)
    on left: 1 2 3 4 5, on right: 0 1 4
Namespacedecl (78)
    on left: 7 9 11 12, on right: 1 2 17
@1 (79)
    on left: 6, on right: 7
@2 (80)
    on left: 8, on right: 9
@3 (81)
    on left: 10, on right: 11
NamespaceBody (82)
    on left: 13, on right: 7 9 11
nTypeDecl (83)
    on left: 14 15 16, on right: 13 14 15
TypeDecl (84)
    on left: 17 18 19, on right: 14 74 304
ErrorDecl (85)
    on left: 20, on right: 15 85 306
classdecl (86)
    on left: 22 24 26 28 30 32 34 36 38 40 42 44 46 48 50 52 54 56
    58 60 62 64 65 66 67 68 69 70 71 72, on right: 18
@4 (87)
    on left: 21, on right: 22
@5 (88)
    on left: 23, on right: 24
@6 (89)
    on left: 25, on right: 26
@7 (90)
    on left: 27, on right: 28
@8 (91)
    on left: 29, on right: 30
@9 (92)
    on left: 31, on right: 32
@10 (93)
    on left: 33, on right: 34
@11 (94)
    on left: 35, on right: 36
@12 (95)
    on left: 37, on right: 38
@13 (96)
    on left: 39, on right: 40
@14 (97)
    on left: 41, on right: 42
@15 (98)
    on left: 43, on right: 44
@16 (99)
    on left: 45, on right: 46
@17 (100)
    on left: 47, on right: 48
@18 (101)
    on left: 49, on right: 50
@19 (102)
    on left: 51, on right: 52
@20 (103)
    on left: 53, on right: 54
@21 (104)
    on left: 55, on right: 56
@22 (105)
    on left: 57, on right: 58
@23 (106)
    on left: 59, on right: 60
@24 (107)
    on left: 61, on right: 62
@25 (108)
    on left: 63, on right: 64
classBody (109)
    on left: 73 74, on right: 22 24 26 28 30 32 34 36 38 40 42 44 46
    48 50 52 54 56 58 60 62 64
QID (110)
    on left: 75 76, on right: 7 11 12 22 26 30 34 50 52 58 60 65 66
    67 68 75 77 78 81 91 93 98 99 100 101 102 103 104 105 117 119 121
    123 131 139 147 155 159 160 161 162 182 183 187 188 203 204 205
    206 207 208 209 210 211 212 213 214 215 216 217 218 221 222 228
    308 309 310 314 316 317 318 319
QIDList (111)
    on left: 77 78, on right: 22 24 30 32 50 52 54 56 65 66 69 70 77
    276 280 284 292 299 300
nFormal (112)
    on left: 79 80, on right: 79 117 121 133 135 137 139 149 151 153
    155 159 162 309 314 315 316 317
formal (113)
    on left: 81 82 83, on right: 79 80
nFeature (114)
    on left: 84 85 86, on right: 73 74 84 85
Feature (115)
    on left: 87 88 89, on right: 84
fieldDecl (116)
    on left: 91 93 95 97 98 99 100 101 102 103 104 105,
    on right: 87
@26 (117)
    on left: 90, on right: 91
@27 (118)
    on left: 92, on right: 93
@28 (119)
    on left: 94, on right: 95
@29 (120)
    on left: 96, on right: 97
INTValue (121)
    on left: 106 107 108 110 111 112 113 115, on right: 104 105 106
    107 108 110
@30 (122)
    on left: 109, on right: 110
@31 (123)
    on left: 114, on right: 115
functionDecl (124)
    on left: 117 119 121 123 125 127 129 131 133 135 137 139 141 143
    145 147 149 151 153 155 156 157 158, on right: 88
@32 (125)
    on left: 116, on right: 117
@33 (126)
    on left: 118, on right: 119
@34 (127)
    on left: 120, on right: 121
@35 (128)
    on left: 122, on right: 123
@36 (129)
    on left: 124, on right: 125
@37 (130)
    on left: 126, on right: 127
@38 (131)
    on left: 128, on right: 129
@39 (132)
    on left: 130, on right: 131
@40 (133)
    on left: 132, on right: 133
@41 (134)
    on left: 134, on right: 135
@42 (135)
    on left: 136, on right: 137
@43 (136)
    on left: 138, on right: 139
@44 (137)
    on left: 140, on right: 141
@45 (138)
    on left: 142, on right: 143
@46 (139)
    on left: 144, on right: 145
@47 (140)
    on left: 146, on right: 147
@48 (141)
    on left: 148, on right: 149
@49 (142)
    on left: 150, on right: 151
@50 (143)
    on left: 152, on right: 153
@51 (144)
    on left: 154, on right: 155
abstFuncDecl (145)
    on left: 159 160 161 162, on right: 89
fieldBody (146)
    on left: 163 164, on right: 91 93 95 97
functionBody (147)
    on left: 165 166, on right: 117 119 121 123 125 127 129 131 133
    135 137 139 141 143 145 147 149 151 153 155
ModifierBuild (148)
    on left: 167 168 169 170 171 172 173 174 175 176 177,
    on right: 178 179
Modifier (149)
    on left: 178 179, on right: 22 24 26 28 38 42 46 50 54 58 62 65
    67 69 71 91 95 98 100 102 104 117 119 125 127 129 131 133 135 137
    139 156 158 159 160 178 276 278 292 294 296 298 299 301
callExpr (150)
    on left: 180 181, on right: 180 216 218 220 226
letExpr (151)
    on left: 182 183 184 185 186 187 188 189 190, on right: 182 183
    184 185 186 244
caseExpr (152)
    on left: 191 192 193 194 195 196 197, on right: 191 192 193 194
    245
nExpr (153)
    on left: 198 199 200 201 202, on right: 165 198 200 233 236 239
expr (154)
    on left: 203 204 205 206 207 208 209 210 211 212 213 214 215 216
    217 218 219 220 221 222 223 224 225 226 227 228 233 236 239 240
    244 245 246 247 248 249 250 251 252 253 254 255 256 257 258 259
    260 261 262 263 264 265 266 267 268 269, on right: 163 180 181
    182 187 191 192 193 195 196 197 198 199 205 212 213 214 223 224
    225 226 227 228 233 236 244 245 246 247 248 249 250 251 252 253
    254 255 256 257 258 259 260 261 271 272
@52 (155)
    on left: 229, on right: 233
@53 (156)
    on left: 230, on right: 233
@54 (157)
    on left: 231, on right: 233
@55 (158)
    on left: 232, on right: 233
@56 (159)
    on left: 234, on right: 236
@57 (160)
    on left: 235, on right: 236
@58 (161)
    on left: 237, on right: 239
@59 (162)
    on left: 238, on right: 239
@60 (163)
    on left: 241, on right: 244
@61 (164)
    on left: 242, on right: 244
@62 (165)
    on left: 243, on right: 244
exprError (166)
    on left: 270 271 272 273 274, on right: 200 201
Interfacedecl (167)
    on left: 276 278 280 282 284 286 288 290 292 294 296 298 299 300
    301 302, on right: 19
@63 (168)
    on left: 275, on right: 276
@64 (169)
    on left: 277, on right: 278
@65 (170)
    on left: 279, on right: 280
@66 (171)
    on left: 281, on right: 282
@67 (172)
    on left: 283, on right: 284
@68 (173)
    on left: 285, on right: 286
@69 (174)
    on left: 287, on right: 288
@70 (175)
    on left: 289, on right: 290
@71 (176)
    on left: 291, on right: 292
@72 (177)
    on left: 293, on right: 294
@73 (178)
    on left: 295, on right: 296
@74 (179)
    on left: 297, on right: 298
interfacebody (180)
    on left: 303 304, on right: 276 278 280 282 284 286 288 290 292
    294 296 298
nInterfaceMethod (181)
    on left: 305 306 307, on right: 303 304 305 306
InterfaceMethod (182)
    on left: 308 309 310 311 312 313 314 315 316 317 318 319,
    on right: 305


state 0

    0 $accept: . Program $end

    error      shift, and go to state 1
    RC         shift, and go to state 2
    NAMESPACE  shift, and go to state 3

    Program        go to state 4
    Namespacedecl  go to state 5


state 1

    5 Program: error .

    $default  reduce using rule 5 (Program)


state 2

    3 Program: RC .

    $default  reduce using rule 3 (Program)


state 3

    7 Namespacedecl: NAMESPACE . QID LC @1 NamespaceBody
    9              | NAMESPACE . error @2 NamespaceBody
   11              | NAMESPACE . QID error @3 NamespaceBody
   12              | NAMESPACE . QID RC

    error  shift, and go to state 6
    ID     shift, and go to state 7

    QID  go to state 8


state 4

    0 $accept: Program . $end
    1 Program: Program . Namespacedecl
    4        | Program . RC

    $end       shift, and go to state 9
    RC         shift, and go to state 10
    NAMESPACE  shift, and go to state 3

    Namespacedecl  go to state 11


state 5

    2 Program: Namespacedecl .

    $default  reduce using rule 2 (Program)


state 6

    9 Namespacedecl: NAMESPACE error . @2 NamespaceBody

    $default  reduce using rule 8 (@2)

    @2  go to state 12


state 7

   76 QID: ID .

    $default  reduce using rule 76 (QID)


state 8

    7 Namespacedecl: NAMESPACE QID . LC @1 NamespaceBody
   11              | NAMESPACE QID . error @3 NamespaceBody
   12              | NAMESPACE QID . RC
   75 QID: QID . DOT ID

    error  shift, and go to state 13
    LC     shift, and go to state 14
    RC     shift, and go to state 15
    DOT    shift, and go to state 16


state 9

    0 $accept: Program $end .

    $default  accept


state 10

    4 Program: Program RC .

    $default  reduce using rule 4 (Program)


state 11

    1 Program: Program Namespacedecl .

    $default  reduce using rule 1 (Program)


state 12

    9 Namespacedecl: NAMESPACE error @2 . NamespaceBody

    $default  reduce using rule 16 (nTypeDecl)

    NamespaceBody  go to state 17
    nTypeDecl      go to state 18


state 13

   11 Namespacedecl: NAMESPACE QID error . @3 NamespaceBody

    $default  reduce using rule 10 (@3)

    @3  go to state 19


state 14

    7 Namespacedecl: NAMESPACE QID LC . @1 NamespaceBody

    $default  reduce using rule 6 (@1)

    @1  go to state 20


state 15

   12 Namespacedecl: NAMESPACE QID RC .

    $default  reduce using rule 12 (Namespacedecl)


state 16

   75 QID: QID DOT . ID

    ID  shift, and go to state 21


state 17

    9 Namespacedecl: NAMESPACE error @2 NamespaceBody .

    $default  reduce using rule 9 (Namespacedecl)


state 18

   13 NamespaceBody: nTypeDecl . RC
   14 nTypeDecl: nTypeDecl . TypeDecl
   15          | nTypeDecl . ErrorDecl

    error      shift, and go to state 22
    RC         shift, and go to state 23
    INTERFACE  shift, and go to state 24
    NAMESPACE  shift, and go to state 3
    CLASS      shift, and go to state 25
    NEW        shift, and go to state 26
    PUBLIC     shift, and go to state 27
    PRIVATE    shift, and go to state 28
    PROTECTED  shift, and go to state 29
    INTERNAL   shift, and go to state 30
    STATIC     shift, and go to state 31
    READONLY   shift, and go to state 32
    VIRTUAL    shift, and go to state 33
    SEALED     shift, and go to state 34
    OVERRIDE   shift, and go to state 35
    ABSTRACT   shift, and go to state 36

    Namespacedecl  go to state 37
    TypeDecl       go to state 38
    ErrorDecl      go to state 39
    classdecl      go to state 40
    ModifierBuild  go to state 41
    Modifier       go to state 42
    Interfacedecl  go to state 43


state 19

   11 Namespacedecl: NAMESPACE QID error @3 . NamespaceBody

    $default  reduce using rule 16 (nTypeDecl)

    NamespaceBody  go to state 44
    nTypeDecl      go to state 18


state 20

    7 Namespacedecl: NAMESPACE QID LC @1 . NamespaceBody

    $default  reduce using rule 16 (nTypeDecl)

    NamespaceBody  go to state 45
    nTypeDecl      go to state 18


state 21

   75 QID: QID DOT ID .

    $default  reduce using rule 75 (QID)


state 22

   20 ErrorDecl: error .

    $default  reduce using rule 20 (ErrorDecl)


state 23

   13 NamespaceBody: nTypeDecl RC .

    $default  reduce using rule 13 (NamespaceBody)


state 24

  280 Interfacedecl: INTERFACE . ID INHERITS QIDList LC @65 interfacebody
  282              | INTERFACE . ID LC @66 interfacebody
  284              | INTERFACE . ID INHERITS QIDList error @67 interfacebody
  286              | INTERFACE . ID INHERITS error @68 interfacebody
  288              | INTERFACE . ID error @69 interfacebody
  290              | INTERFACE . error @70 interfacebody
  300              | INTERFACE . ID INHERITS QIDList RC
  302              | INTERFACE . ID RC

    error  shift, and go to state 46
    ID     shift, and go to state 47


state 25

   30 classdecl: CLASS . ID INHERITS QID IMPLEMENTS QIDList IS @8 classBody
   32          | CLASS . ID IMPLEMENTS QIDList IS @9 classBody
   34          | CLASS . ID INHERITS QID IS @10 classBody
   36          | CLASS . ID IS @11 classBody
   40          | CLASS . ID IMPLEMENTS error @13 classBody
   44          | CLASS . ID INHERITS error @15 classBody
   48          | CLASS . error @17 classBody
   52          | CLASS . ID INHERITS QID IMPLEMENTS QIDList error @19 classBody
   56          | CLASS . ID IMPLEMENTS QIDList error @21 classBody
   60          | CLASS . ID INHERITS QID error @23 classBody
   64          | CLASS . ID error @25 classBody
   66          | CLASS . ID INHERITS QID IMPLEMENTS QIDList END
   68          | CLASS . ID INHERITS QID END
   70          | CLASS . ID IMPLEMENTS QIDList END
   72          | CLASS . ID END

    error  shift, and go to state 48
    ID     shift, and go to state 49


state 26

  177 ModifierBuild: NEW .

    $default  reduce using rule 177 (ModifierBuild)


state 27

  167 ModifierBuild: PUBLIC .

    $default  reduce using rule 167 (ModifierBuild)


state 28

  170 ModifierBuild: PRIVATE .

    $default  reduce using rule 170 (ModifierBuild)


state 29

  168 ModifierBuild: PROTECTED .

    $default  reduce using rule 168 (ModifierBuild)


state 30

  169 ModifierBuild: INTERNAL .

    $default  reduce using rule 169 (ModifierBuild)


state 31

  171 ModifierBuild: STATIC .

    $default  reduce using rule 171 (ModifierBuild)


state 32

  172 ModifierBuild: READONLY .

    $default  reduce using rule 172 (ModifierBuild)


state 33

  176 ModifierBuild: VIRTUAL .

    $default  reduce using rule 176 (ModifierBuild)


state 34

  174 ModifierBuild: SEALED .

    $default  reduce using rule 174 (ModifierBuild)


state 35

  175 ModifierBuild: OVERRIDE .

    $default  reduce using rule 175 (ModifierBuild)


state 36

  173 ModifierBuild: ABSTRACT .

    $default  reduce using rule 173 (ModifierBuild)


state 37

   17 TypeDecl: Namespacedecl .

    $default  reduce using rule 17 (TypeDecl)


state 38

   14 nTypeDecl: nTypeDecl TypeDecl .

    $default  reduce using rule 14 (nTypeDecl)


state 39

   15 nTypeDecl: nTypeDecl ErrorDecl .

    $default  reduce using rule 15 (nTypeDecl)


state 40

   18 TypeDecl: classdecl .

    $default  reduce using rule 18 (TypeDecl)


state 41

  179 Modifier: ModifierBuild .

    $default  reduce using rule 179 (Modifier)


state 42

   22 classdecl: Modifier . CLASS ID INHERITS QID IMPLEMENTS QIDList IS @4 classBody
   24          | Modifier . CLASS ID IMPLEMENTS QIDList IS @5 classBody
   26          | Modifier . CLASS ID INHERITS QID IS @6 classBody
   28          | Modifier . CLASS ID IS @7 classBody
   38          | Modifier . CLASS ID IMPLEMENTS error @12 classBody
   42          | Modifier . CLASS ID INHERITS error @14 classBody
   46          | Modifier . CLASS error @16 classBody
   50          | Modifier . CLASS ID INHERITS QID IMPLEMENTS QIDList error @18 classBody
   54          | Modifier . CLASS ID IMPLEMENTS QIDList error @20 classBody
   58          | Modifier . CLASS ID INHERITS QID error @22 classBody
   62          | Modifier . CLASS ID error @24 classBody
   65          | Modifier . CLASS ID INHERITS QID IMPLEMENTS QIDList END
